# drawspectrum

./: README.md  basegausscontroller.py  controller.py  cutgausscontroller.py  cutgausspanel.py  diffgausscontroller.py  diffgausspanel.py  drawspectrum.py  gausscontroller.py  gausspanel.py  graphcanvas.py  mainwindow.py  meandercontroller.py  meanderpanel.py  pyproject.toml  rectcontroller.py  rectpanel.py  sin2controller.py  sin2panel.py  sincontroller.py  sinpanel.py  system.py
