[tool.poetry]
name = "drawspectrum"
version = "0.1.0"
description = "Draw signals spectrums"
authors = ["Eugene Ilin <jenyay.ilin@gmail.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
wxpython = "==4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.masonry.api"
